src/test/deca/syntax/invalid/renduInter01/05while_missing_condition.deca
// Description:
//      Programme lexicalement incorrect
//      => une boucle while doit posséder une condition "while (condition) { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : token ')' inattendu

{
    int x = 4;
    while ( ) {
        x = 3;
    }

}

